add list of country in main page

--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,8 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a href="./main_page.html" class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
+                <a href="./main_page.html" class="navbar-brand colo d-flex px-2"><i
+                        class="fa-solid fa-earth-europe d-none d-sm-block"></i>
                     Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
@@ -84,44 +85,100 @@
             <div class="container_text p-2">
                 <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
                     Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
-                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
-                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
-                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
-                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
-                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
-                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
-                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
+                </p>
+                <p>
+                    Il continente di Evedim è grande circa 150000 kilometri quadrati, la sua vasta estenzione è
+                    circondata su ogni lato dal vasto oceano senza fine, la sua superficie è costellata di fiumi, laghi,
+                    montagne e foreste, distese di vulcani e catene montuose innevate. La catena più importante del
+                    continente è la cresta di drago che dai monti invalicabili a nord percorre come una cicatrice tutta
+                    Evendim fino all'oceano dal lat occidentale del continente.
+                </p>
+
             </div>
             <div class="intestation p-2 mt-5">
-                <h2><strong>Panoramica su Evendim</strong></h2>
+                <h2><strong>Evendim Fisica</strong></h2>
             </div>
             <div class="container_text p-2">
-                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
-                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
-                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
-                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
-                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
-                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
-                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
-                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
-                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
+                <p>In questo paragrafo elencheremo le principali strutture geografiche fisiche rilevanti del continete,
+                    catene montuose e monti che ne fanno parte, laghi e fiumi di grande importanza, foreste e piane
+                    vulcaniche </p>
             </div>
             <div class="intestation p-2 mt-5">
-                <h2><strong>Panoramica su Evendim</strong></h2>
+                <h2><strong>Evendim Politica</strong></h2>
             </div>
             <div class="container_text p-2">
-                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
-                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
-                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
-                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
-                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
-                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
-                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
-                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
-                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
+                <p>
+                    In questo paragrafo vedremo i nomi dei piu grandi regni, imperi, ducati, città stato e accademie che
+                    governano il continente e i suoi abitanti.
+                </p>
+
+                <p>
+                    Una prima divisione gia vista nella parte fisica è quella cardinale, Evendim è diviso in tre
+                    princiali settori:
+                </p>
+                <ul>
+                    <li>
+                        Settore Settentrionale: che include tutti i paesi che si trovano a nord della cresta di drago e
+                        alle pendici della catena invalicabile
+                    </li>
+                    <li>
+                        Settore Meridionale: che include tutti i paesi che si trovano a sud della cresta di drago e a
+                        sud rispetto al tempio del dao della spada
+                    </li>
+                    <li>
+                        Settore Orientale: Che include i paesi che vanno dalle praterie orientali lungo la grande via ad
+                        est fino al tempio del dao della spada
+                    </li>
+                </ul>
+
+                <p>
+                    Innanzitutto dobbiamo chiarire che ogni popolo di Evendim è governato in maniera differente, non
+                    necessariamente su base etncia in quanto esistono stati come la repubblica di Midtus e il regno di
+                    Lunargentea che accolgono ogni razza, mentre altri stati, pur non essendo chiusi a nessuan specie,
+                    sono prevalentemente etnici come Sylvarden e Noldodren.
+                </p>
+
+                <p>
+                    Altri stati poi sono alle volte semplici città o imporanti nodi commerciali che si sono resi
+                    indipendenti dalle grandi nazioni, questo non vuol dire che governino la sola città ma spesso
+                    dettano leggi su tutti i territori limitrofi rappresentano potenze minori ma degne di sedere al
+                    tavolo delle grandi potenze
+                </p>
+
+                <p>
+                    Detto questo gli stati che compongono Evendim son i seguenti:
+                </p>
+
+                <span><strong>Stati settentrionali</strong></span>
+                <ul>
+                    <li><a href="">Sylvarden</a></li>
+                    <li><a href="">Regno di Sinner</a></li>
+                    <li><a href="">Nymeria</a></li>
+                    <li><a href="">Città libera di Syrbol</a></li>
+                    <li><a href="">Città di Bastion</a></li>
+                    <li><a href="">Ducato dell'ouroboro</a></li>
+                    <li><a href="">Regno di Iaris</a></li>
+
+                </ul>
+
+                <span><strong>Stati Meridionali</strong></span>
+                <ul>
+                    <li><a href="">Repubblica di Midtus</a></li>
+                    <li><a href="">Regno di Lunargentea</a></li>
+                    <li><a href="">Noldodren</a></li>
+                    <li><a href="">Regno di Khaz-Morand</a></li>
+                    <li><a href="">Regno del mare del Sud</a></li>
+                    <li><a href="">Regno di Opal</a></li>
+                    
+                </ul>
+                <span><strong>Stati Orientali</strong></span>
+                <ul>
+                    <li><a href="">Valle luminosa</a></li>
+                    <li><a href="">Praterie Orientali</a></li>
+                    <li><a href="">Tempio del dao della spada</a></li>
+                    <li><a href="">Accademia del cielo viola</a></li>
+                    <li><a href="">Torre del sole di Amaranto</a></li>
+                </ul>
             </div>
 
         </main>
