--- a/main_page.html
+++ b/main_page.html
@@ -79,7 +79,7 @@
                     di amicizia e amore in questa terra di miti e leggende viventi!
                 </p>
             </div>
-            <div class="intestation p-2 mt-5">
+            <div class="intestation p-2 mt-3">
                 <h2><strong>Panoramica su Evendim</strong></h2>
             </div>
             <div class="container_text p-2">
@@ -95,15 +95,45 @@
                 </p>
 
             </div>
-            <div class="intestation p-2 mt-5">
+            <div class="intestation p-2 mt-3">
                 <h2><strong>Evendim Fisica</strong></h2>
             </div>
             <div class="container_text p-2">
                 <p>In questo paragrafo elencheremo le principali strutture geografiche fisiche rilevanti del continete,
                     catene montuose e monti che ne fanno parte, laghi e fiumi di grande importanza, foreste e piane
-                    vulcaniche </p>
+                    vulcaniche
+                </p>
+
+                <p>
+                    Innanzitutto dovremmo spiegare come approfondiremo meglio in seguito che il territorio di evendim è
+                    diviso in tre grandi regioni geografiche
+                </p>
+
+                <ul>
+                    <li>Regione Settentrionale</li>
+                    <li>Regione Meridionale</li>
+                    <li>Regione Orientale</li>
+                </ul>
+
+                <p>
+                    Detto questo i luoghi di interesse fisico maggiore del continete sono:
+                </p>
+                
+                <ul>
+                    <li><a href="">Cresta di drago</a></li>
+                    <li><a href="">Catena montuosa Invalicabile</a></li>
+                    <li><a href="">Lago dei sognatori</a></li>
+                    <li><a href="">Fiume Andanuin</a></li>
+                    <li><a href="">Fiume dei Sospiri</a></li>
+                    <li><a href="">Lago Vessel</a></li>
+                    <li><a href="">Lago Vittria</a></li>
+                    <li><a href="">Necropolis</a></li>
+                    <li><a href="">Paludi meridionali</a></li>
+                    <li><a href="">Bosco di Mallorm</a></li>
+                    <li><a href="">Arcipelago Perduto</a></li>
+                </ul>
             </div>
-            <div class="intestation p-2 mt-5">
+            <div class="intestation p-2 mt-3">
                 <h2><strong>Evendim Politica</strong></h2>
             </div>
             <div class="container_text p-2">
@@ -169,7 +199,7 @@
                     <li><a href="">Regno di Khaz-Morand</a></li>
                     <li><a href="">Regno del mare del Sud</a></li>
                     <li><a href="">Regno di Opal</a></li>
-                    
+
                 </ul>
                 <span><strong>Stati Orientali</strong></span>
                 <ul>
@@ -180,6 +210,7 @@
                     <li><a href="">Torre del sole di Amaranto</a></li>
                 </ul>
             </div>
+            <!-- country an kingdom -->
 
         </main>
 
