--- a/religion.html
+++ b/religion.html
@@ -71,9 +71,8 @@
             </div>
             <div class="container_text p-2">
                 <p class="welcome">
-                    In questa sezione sarà possibili consultare testi e opere letterarie scritte nei secoli dai piu
-                    dotti eruditi di Evendim, antiche pergamene e tomi perduti nel tempo raccolti nelle meravigtliose
-                    bibliotece della accademie qui sono a vostra disposizione
+                    In questa sezione vedremo i principali credi religiosi che condividno gli esseri viventi di Evendim,
+                    i culti delle divnità maggiori i culti demoniaci e simili
                 </p>
             </div>
         </main>
