--- a/history.html
+++ b/history.html
@@ -49,6 +49,10 @@
                     <a href="./magic_and_science.html"><span class="d-none d-lg-block">Magia e Scienza</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
+                    <a href="./religion.html"><i class="fa-solid fa-person-praying"></i></a>
+                    <a href="./religion.html"><span class="d-none d-lg-block">Religione</span></a>
+                </div>
+                <div class="d-flex p-3 w-100">
                     <a href="./library.html"><i class="fa-solid fa-book"></i></a>
                     <a href="./library.html"><span class="d-none d-lg-block"> Biblioteca</span></a>
                 </div>
