edit list container justify

--- a/main_page.html
+++ b/main_page.html
@@ -122,7 +122,7 @@
                 <p>
                     Detto questo i luoghi di interesse fisico maggiore del continete sono:
                 </p>
-                
+
                 <ul>
                     <li><a href="">Cresta di drago</a></li>
                     <li><a href="">Catena montuosa Invalicabile</a></li>
@@ -182,37 +182,40 @@
                 <p>
                     Detto questo gli stati che compongono Evendim son i seguenti:
                 </p>
+                <div class="list_container d-flex">
+                    <ul>
+                        <span><strong>Stati Meridionali</strong></span>
+                        <li><a href="">Repubblica di Midtus</a></li>
+                        <li><a href="">Regno di Lunargentea</a></li>
+                        <li><a href="">Noldodren</a></li>
+                        <li><a href="">Regno di Khaz-Morand</a></li>
+                        <li><a href="">Regno del mare del Sud</a></li>
+                        <li><a href="">Regno di Opal</a></li>
 
-                <span><strong>Stati settentrionali</strong></span>
-                <ul>
-                    <li><a href="">Sylvarden</a></li>
-                    <li><a href="">Regno di Sinner</a></li>
-                    <li><a href="">Nymeria</a></li>
-                    <li><a href="">Città libera di Syrbol</a></li>
-                    <li><a href="">Città di Bastion</a></li>
-                    <li><a href="">Ducato dell'ouroboro</a></li>
-                    <li><a href="">Regno di Iaris</a></li>
+                    </ul>
 
-                </ul>
+                    <ul>
+                        <span><strong>Stati settentrionali</strong></span>
+                        <li><a href="">Sylvarden</a></li>
+                        <li><a href="">Regno di Sinner</a></li>
+                        <li><a href="">Nymeria</a></li>
+                        <li><a href="">Città libera di Syrbol</a></li>
+                        <li><a href="">Città di Bastion</a></li>
+                        <li><a href="">Ducato dell'ouroboro</a></li>
+                        <li><a href="">Regno di Iaris</a></li>
 
-                <span><strong>Stati Meridionali</strong></span>
-                <ul>
-                    <li><a href="">Repubblica di Midtus</a></li>
-                    <li><a href="">Regno di Lunargentea</a></li>
-                    <li><a href="">Noldodren</a></li>
-                    <li><a href="">Regno di Khaz-Morand</a></li>
-                    <li><a href="">Regno del mare del Sud</a></li>
-                    <li><a href="">Regno di Opal</a></li>
+                    </ul>
+                    
+                    <ul>
+                        <span><strong>Stati Orientali</strong></span>
+                        <li><a href="">Valle luminosa</a></li>
+                        <li><a href="">Praterie Orientali</a></li>
+                        <li><a href="">Tempio del dao della spada</a></li>
+                        <li><a href="">Accademia del cielo viola</a></li>
+                        <li><a href="">Torre del sole di Amaranto</a></li>
+                    </ul>
+                </div>
 
-                </ul>
-                <span><strong>Stati Orientali</strong></span>
-                <ul>
-                    <li><a href="">Valle luminosa</a></li>
-                    <li><a href="">Praterie Orientali</a></li>
-                    <li><a href="">Tempio del dao della spada</a></li>
-                    <li><a href="">Accademia del cielo viola</a></li>
-                    <li><a href="">Torre del sole di Amaranto</a></li>
-                </ul>
             </div>
             <!-- country an kingdom -->
 
