--- a/magic_and_science.html
+++ b/magic_and_science.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item mt-4">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item mt-4">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false"
@@ -156,6 +156,82 @@
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia naturale è intrecciata con le forze della natura stessa.
+                            </p>
+                            <p>
+                                I druidi e i ranger sono spesso praticanti di questa forma di magia, ottenendo i loro
+                                poteri dalle foreste, dai fiumi e dalla terra stessa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mt-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseSix" aria-expanded="false"
+                            aria-controls="flush-collapseSix">
+                            Magia esoterica
+                        </button>
+                    </h2>
+                    <div id="flush-collapseSix" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia naturale è intrecciata con le forze della natura stessa.
+                            </p>
+                            <p>
+                                I druidi e i ranger sono spesso praticanti di questa forma di magia, ottenendo i loro
+                                poteri dalle foreste, dai fiumi e dalla terra stessa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mt-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseSeven" aria-expanded="false"
+                            aria-controls="flush-collapseSeven">
+                            Magia Profetica
+                        </button>
+                    </h2>
+                    <div id="flush-collapseSeven" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia naturale è intrecciata con le forze della natura stessa.
+                            </p>
+                            <p>
+                                I druidi e i ranger sono spesso praticanti di questa forma di magia, ottenendo i loro
+                                poteri dalle foreste, dai fiumi e dalla terra stessa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mt-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseEight" aria-expanded="false"
+                            aria-controls="flush-collapseEight">
+                            Ki
+                        </button>
+                    </h2>
+                    <div id="flush-collapseEight" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia naturale è intrecciata con le forze della natura stessa.
+                            </p>
+                            <p>
+                                I druidi e i ranger sono spesso praticanti di questa forma di magia, ottenendo i loro
+                                poteri dalle foreste, dai fiumi e dalla terra stessa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item mt-4 mb-5">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseNine" aria-expanded="false"
+                            aria-controls="flush-collapseNine">
+                            Maledizioni
+                        </button>
+                    </h2>
+                    <div id="flush-collapseNine" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <p>La magia naturale è intrecciata con le forze della natura stessa.
                             </p>
